make DarkModeSample a swing app